@@ -1,5 +1,6 @@
 iowow (1.4.11) UNRELEASED; urgency=medium
 
+  * Added IW_ERROR_NOT_ALLOWED error code (iwlog.h)
   * Added RCR() error checking macro (basedefs.h)
   * Added iwlist_sort(), iwulist_sort() (iwarr.h)
   * Added iwstw_schedule_empty_only() (iwstw.h)
